--- a/src/assets/styles/_variable_overrides.scss
+++ b/src/assets/styles/_variable_overrides.scss
@@ -57,6 +57,7 @@
  
 //  /* 边框颜色 */
 //  $color-border-base: #C5D9E8 !default;
+ $color-border-base: #db2828 !default;
 //  $color-border-split: tint($color-border-base, 20%) !default; // 分割线
 //  $color-border-light: tint($color-border-base, 30%) !default;
 //  $color-border-lighter: tint($color-border-base, 50%) !default;
