--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,5 +1,10 @@
+// taro ui
 @import "./variable_overrides";
-
 @import "~taro-ui/dist/style/index.scss";
 
+// variables
+@import "./variables";
+
+// customize
 @import "./utilities";
+@import "page";
