add 富文本功能-引入 头部组件-40% 展示 news 页面-50%

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -7,7 +7,11 @@
 
 // customize
 @import "./utilities";
-@import "page";
+@import "./page";
 
 //placeholder
-@import "placeholder";
+@import "./placeholder";
+
+// 组件
+@import "./components/main";
+
