--- a/src/assets/styles/_page.scss
+++ b/src/assets/styles/_page.scss
@@ -1,11 +1,21 @@
 .page {
     &-demo {
         font-weight: 200;
-        font-size: 16px * $hd;
         text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 90vh;
+    }
+    &-temp {
+        font-weight: 200;
+        display: flex;
+    }
+    &-index {
+        font-weight: 200;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
 }
