--- a/src/pages/show-news-item/index.scss
+++ b/src/pages/show-news-item/index.scss
@@ -1,24 +1,85 @@
 .news-item {
     display: flex;
-    width: 96vw;
-    width: 100%!important;
+    width: 100vw;
     justify-content: center;
     flex-direction: column;
 
+    .imgCover {
+        width: 100vw;
+        margin: 0 auto;
+        position: relative;
+
+        &-img {
+            width: 100vw;
+        }
+
+        .placeholder {
+            width: 100vw;
+            height: 1rem;
+            background: #fff;
+            border-radius: 1rem 1rem 0 0;
+            position: absolute;
+            z-index: 1;
+            bottom: .2rem
+        }
+    }
+
     .news-header {
-        display: flex;
-        width: 96vw;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100vw;
+        margin-top: -2.5vh;
+        padding-bottom: .75rem;
+        margin-bottom:  .55rem;
+        border-bottom: 1px solid #eee;
+        position: relative;
+
+        .title {
+            width: 75vw;
+            display: block;
+            font-size: 1.2rem;
+            margin-top: .8rem;
+            margin-left: 5vw;
+            // margin-right: 20vw;
+            line-height: 1.8rem;
+        }
+
+        // 收藏
+        .collect {
+            width: 1.4rem;
+            height: 1.4rem;
+            position: absolute;
+            right: 5vw;
+            font-size: 1.8rem;
+            top: 1.1rem;
+        }
+
+        .info {
+            width: 90vw;
+            margin: 0 auto;
+            padding-top: 1rem;
+            display: flex;
+            justify-content: space-between;
+            
+            &-item {
+                margin: 0;
+                font-weight: 600;
+                color: #AEACB3
+            }
+        }
     }
-    .news-title {
-        font-size: 1.2rem;
-        font-weight: 500;
+
+    // "详情" 文字
+    .details {
+        width: 90vw;
+        display: block;
+        font-size: .7rem;
+        font-weight: 600;
+        color: #AEACB3;
+        margin: 0 auto .3rem;
     }
-    .desc {
-        font-size: 0.8rem;
-        font-weight: 300;
+
+    .content {
+        width: 90vw;
+        margin: 0 auto
     }
 }
 
@@ -27,4 +88,9 @@
   background-color: #23241f;
   color: #f8f8f2;
   overflow: visible;
+}
+
+.wxParse-inline {
+    font-size: .9rem!important;
+    color: #635E71
 }
