增加了行星页的静态页

--- a/src/components/news-item/index.scss
+++ b/src/components/news-item/index.scss
@@ -12,7 +12,7 @@
 
         .img {
             width: 94vw;
-            border-radius: 1rem;
+            border-radius: .8rem;
         }
         .title {
             width: 80vw;
