--- a/src/components/slider-banner/index.scss
+++ b/src/components/slider-banner/index.scss
@@ -21,7 +21,7 @@
         .img {
             width: 50vw;
             height: 20vh;
-            border-radius: 1rem;
+            border-radius: .8rem;
         }
 
         .text-box {
