--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -2,7 +2,7 @@
 
     display: flex;
     width: 94vw;
-    border-radius: 1rem;
+    border-radius: .8rem;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -11,7 +11,7 @@
     .video {
         width: 94vw;
         height: 54vh;
-        border-radius: 1rem;
+        border-radius: .8rem;
     }
 
     .text-view {
