--- a/src/pages/show-news-item/index.scss
+++ b/src/pages/show-news-item/index.scss
@@ -17,7 +17,7 @@
             width: 100vw;
             height: 1rem;
             background: #fff;
-            border-radius: 1rem 1rem 0 0;
+            border-radius: .8rem .8rem 0 0;
             position: absolute;
             z-index: 1;
             bottom: .2rem
