--- a/src/components/news-item/main.scss
+++ b/src/components/news-item/main.scss
@@ -12,11 +12,11 @@
 
         .img {
             width: 94vw;
-            border-radius: .8rem;
+            border-radius: .5rem;
         }
         .title {
             width: 80vw;
-            font-size: 1.2rem;
+            font-size: 1rem;
             font-weight: 500;
             position: relative;
             word-wrap:break-word
@@ -25,6 +25,7 @@
             width: 94vw;
             font-size: 0.8rem;
             font-weight: 300;
+            color: #7b7979;
             word-wrap:break-word
         }
         .tip {
