--- a/src/components/block-title/main.scss
+++ b/src/components/block-title/main.scss
@@ -1,13 +1,13 @@
 .title-style {
     display: flex;
-    width: 94vw;;
+    width: 92vw;;
 
     .title-style-text {
         display: inline-block;
         font-size: 1rem;
         font-weight: 800;
         text-align: start;
-        padding-left: 10px;
+        // padding-left: 10px;
     }
 
 }
