--- a/src/components/slider-banner/main.scss
+++ b/src/components/slider-banner/main.scss
@@ -1,5 +1,5 @@
 .slider-style {
-    width: 94vw;
+    width: 92vw;
     height: 28vh;
 
     // 一条的
@@ -26,13 +26,13 @@
 
         .text-box {
 
-            width: 43vw;
-            margin: 0 .55rem;
+            // width: 43vw;
+            // margin: 0 .55rem;
             overflow:hidden;
             text-overflow: ellipsis;
 
             .title {
-                width: 43vw;
+                // width: 43vw;
                 display: inline-block;
                 font-size: 0.90rem;
                 font-weight: 500;
