--- a/src/pages/article-item/main.scss
+++ b/src/pages/article-item/main.scss
@@ -1,3 +1,6 @@
+// @import "~taro-ui/dist/style/components/toast.scss";
+// @import "~taro-ui/dist/style/components/icon.scss";
+
 .news-item {
     display: flex;
     width: 100vw;
@@ -13,6 +16,7 @@
             width: 100vw;
         }
 
+        // 圆角那个盖的 我这名字取的。。。我都看不懂
         .placeholder {
             width: 100vw;
             height: 1rem;
@@ -44,12 +48,26 @@
 
         // 收藏
         .collect {
-            width: 1.4rem;
-            height: 1.4rem;
+            width: 2rem;
+            font-size: 1rem;
+            color: rgb(211, 49, 184);
             position: absolute;
+            z-index: 5;
             right: 5vw;
             font-size: 1.8rem;
             top: 1.1rem;
+
+            &-btn {
+                border: 1px #FFF solid;
+                margin: 0;
+                padding: 0;
+                outline: none;
+                background-color: #FFF;
+
+                &::after {
+                    border: none;
+                }
+            }
         }
 
         .info {
