--- a/src/pages/history-item/main.scss
+++ b/src/pages/history-item/main.scss
@@ -38,12 +38,12 @@
         position: relative;
 
         .title {
-            width: 75vw;
+            // width: 85vw;
             display: block;
             font-size: 1.2rem;
             margin-top: .8rem;
             margin-left: 5vw;
-            // margin-right: 20vw;
+            margin-right: 5vw;
             line-height: 1.8rem;
         }
 
