--- a/src/pages/user/main.scss
+++ b/src/pages/user/main.scss
@@ -68,7 +68,7 @@
                 .option-item-icon {
                     font-size: .9rem;
                     font-weight: normal;
-                    color: rgb(226, 62, 212);
+                    color: #bd74f7;
                     padding-right: 2rem;
                 }
             }
