--- a/src/pages/article-item/main.scss
+++ b/src/pages/article-item/main.scss
@@ -50,12 +50,11 @@
         // 收藏
         .collect {
             width: 2rem;
-            font-size: 1rem;
-            color: rgb(211, 49, 184);
+            color: #bd74f7;
             position: absolute;
             z-index: 5;
             right: 5vw;
-            font-size: 1.8rem;
+            font-size: 1.4rem;
             top: 1.1rem;
 
             &-btn {
