--- a/src/pages/collections/mian-colls.scss
+++ b/src/pages/collections/mian-colls.scss
@@ -35,6 +35,7 @@
                 border: 1px #FFF solid;
                 margin: 0;
                 padding: 0;
+                z-index: 10;
                 outline: none;
                 background-color: #FFF;
 
@@ -54,10 +55,14 @@
             }
 
             &-img {
-                width: 210rpx;
-                height: 190rpx;
-                margin: 10rpx 0 10rpx 10rpx;
-                border-radius: .5rem;
+                width: 225rpx;
+                // height: 190rpx;
+                height: 210rpx;
+                
+                // margin: 10rpx 0 10rpx 10rpx;
+                border-radius: .5rem 0 0 .5rem;
+
+                // ERROR 疑似 微信自己的bug啊 包住啥都不写就可以 直接控制图片 有的图片还是会长出去
             }
 
             &-info {
